mongodb connection setup

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONPORT=4005
-MONGODB_STRING="mongodb+srv://codewithme33:<db_password>@cluster0.kwn0r.mongodb.net/codewithme33?retryWrites=true&w=majority&appName=Cluster0"
+PORT=4005
+MONGODB_STRING="mongodb+srv://codewithme33:hithere@cluster0.kwn0r.mongodb.net/Gree_Station?retryWrites=true&w=majority&appName=Cluster0"
